Fix update URL and adjust download link in version file